json loading data

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="map-container">
             <object data="/assets/map.svg" type="image/svg+xml" id="map">
-                Su navegador no soporta este mapa. Use otro.
+                Su navegador no soporta este mapa. Use otro navegador porfavor.
             </object>
         </div>
     </div>
