--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             </object>
         </div>
     </div>
+    <div id="region-tooltip" class="tooltip hidden">
+        <h3 id="tooltip-title">asdfasdf</h3>
+        <div id="tooltip-content">
+          <p id="tooltip-estados">asdf</p>
+          <p id="tooltip-actividades">asdf</p>
+          <p id="tooltip-pib"></p>
+          <p id="tooltip-sueldos">asdf</p>
+          <p id="tooltip-habitantes"></p>
+        </div>
+      </div>
 </body>
 <script src="script.js">
 
