--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="root">
+    <div class="root" id="root">
         <div class="title">
             <h1>Zonas Geoeconómicas de México</h1>
         </div>
