minor styling changeS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
     <div class="root" id="root">
         <div class="title">
-            <h1>Zonas Geoeconómicas de México</h1>
+            <div class="title-icon">
+                <i class="fa-solid fa-map-marked-alt"></i>
+            </div>
+            <div class="title-text">
+                <h1> Zonas Geoeconómicas de México</h1>
+            </div>
+
         </div>
         <!-- <div class="search-bar">
             <input type="text" placeholder="Ingrese un estado" id="search-bar-input">
@@ -23,8 +29,11 @@
                 Su navegador no soporta este mapa. Use otro navegador porfavor.
             </object>
         </div>
+        <div class="footer">
+            <p>Zonas Geoeconómicas de México ©2025</p>
+        </div>
     </div>
-    <div id="region-tooltip" class="tooltip ">
+    <div id="region-tooltip" class="tooltip hidden">
         <h3 id="tooltip-title">asdfasdf</h3>
         <div id="tooltip-content">
           <p id="tooltip-estados">asdf</p>
