fixing mouse hover

--- a/index.html
+++ b/index.html
@@ -33,14 +33,31 @@
             <p>Zonas Geoeconómicas de México ©2025</p>
         </div>
     </div>
-    <div id="region-tooltip" class="tooltip hidden">
-        <h3 id="tooltip-title">asdfasdf</h3>
+    <div id="region-tooltip" class="tooltip ">
+        <div class="tooltip-header">
+            <h3 id="tooltip-title"></h3>
+        </div>
         <div id="tooltip-content">
-          <p id="tooltip-estados">asdf</p>
-          <p id="tooltip-actividades">asdf</p>
-          <p id="tooltip-pib"></p>
-          <p id="tooltip-sueldos">asdf</p>
-          <p id="tooltip-habitantes"></p>
+            <div class="tooltip-row">
+                <i class="fa-solid fa-map-marked-alt"></i>
+                <p id="tooltip-estados"></p>
+            </div>
+            <div class="tooltip-row">
+                <i class="fa-solid fa-industry"></i>
+                <p id="tooltip-actividades"></p>
+            </div>
+            <div class="tooltip-row">
+                <i class="fa-solid fa-chart-line"></i>
+                <p id="tooltip-pib"></p>
+            </div>
+            <div class="tooltip-row">
+                <i class="fa-solid fa-sack-dollar"></i>
+                <p id="tooltip-sueldos"></p>
+            </div>
+            <div class="tooltip-row">
+                <i class="fa-solid fa-people-roof"></i>
+                <p id="tooltip-habitantes"></p>
+            </div>
         </div>
       </div>
 </body>
