--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input type="text" placeholder="Ingrese un estado" id="search-bar-input">
         </div> -->
         <div class="map-container">
-            <object data="/assets/map.svg" type="image/svg+xml" id="map">
+            <object data="/assets/maplt.svg" type="image/svg+xml" id="map">
                 Su navegador no soporta este mapa. Use otro navegador porfavor.
             </object>
         </div>
@@ -59,6 +59,9 @@
                 <p id="tooltip-habitantes"></p>
             </div>
         </div>
-      </div>
+    </div>
+    <div id="region-info">
+
+    </div>
 </body>
 </html><script src="script.js"></script>
