initial panel implementaion, missing styling

--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
             </div>
         </div>
     </div>
-    <div id="region-info">
+    <div id="region-info" class="region-info-panel">
+        <div class="panel-header">
+            <button id="close-panel" class="close-button"><i class="fa-solid fa-times"></i></button>
 
+            <h2 id="panel-title"></h2>
+        </div>
+        <div id="panel-content">
+        </div>
     </div>
 </body>
 </html><script src="script.js"></script>
