updated json data with... more belieavable stuff?
still waiting for the actual data and map svg from classmates

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input type="text" placeholder="Ingrese un estado" id="search-bar-input">
         </div> -->
         <div class="map-container">
-            <object data="/assets/maplt.svg" type="image/svg+xml" id="map">
+            <object data="/assets/map.svg" type="image/svg+xml" id="map">
                 Su navegador no soporta este mapa. Use otro navegador porfavor.
             </object>
         </div>
@@ -33,7 +33,7 @@
             <p>Zonas Geoeconómicas de México ©2025</p>
         </div>
     </div>
-    <div id="region-tooltip" class="tooltip ">
+    <div id="region-tooltip" class="tooltip hidden">
         <div class="tooltip-header">
             <h3 id="tooltip-title"></h3>
         </div>
